@@ -721,6 +721,9 @@ void ResourceMap::loadDefaultConfiguration()
   // PointToPointEvaluation parameters //
   addAsUnsignedInteger("PointToPointEvaluation-BlockSize", 256);
 
+  // FieldToPointConnection parameters //
+  addAsUnsignedInteger("FieldToPointConnection-BlockSize", 256);
+
   // SQP parameters //
   addAsScalar("SQP-DefaultOmega", 1.0e-4);
   addAsScalar("SQP-DefaultSmooth", 1.2);
