@@ -17,6 +17,118 @@ field= 0 : [ -1           1.19752    ]
 9 : [  1          -0.0247796  ]
 myFunc(field)= [0.0932294,0.160971,0.257988,0.371718,0.499584,0.641678,0.79533,0.948199,1.07082,1.1121]#10
 called  1  times
+sample= [field 0:
+0 : [ -1         0.521319 ]
+1 : [ -0.777778  0.626964 ]
+2 : [ -0.555556  0.709762 ]
+3 : [ -0.333333  0.766697 ]
+4 : [ -0.111111  0.795692 ]
+5 : [  0.111111  0.795692 ]
+6 : [  0.333333  0.766697 ]
+7 : [  0.555556  0.709762 ]
+8 : [  0.777778  0.626964 ]
+9 : [  1         0.521319 ]
+field 1:
+0 : [ -1         0.834397 ]
+1 : [ -0.777778  0.930264 ]
+2 : [ -0.555556  0.840221 ]
+3 : [ -0.333333  0.582262 ]
+4 : [ -0.111111  0.207939 ]
+5 : [  0.111111 -0.207939 ]
+6 : [  0.333333 -0.582262 ]
+7 : [  0.555556 -0.840221 ]
+8 : [  0.777778 -0.930264 ]
+9 : [  1        -0.834397 ]
+field 2:
+0 : [ -1         0.970148 ]
+1 : [ -0.777778  0.898034 ]
+2 : [ -0.555556  0.330024 ]
+3 : [ -0.333333 -0.420226 ]
+4 : [ -0.111111 -0.938426 ]
+5 : [  0.111111 -0.938426 ]
+6 : [  0.333333 -0.420226 ]
+7 : [  0.555556  0.330024 ]
+8 : [  0.777778  0.898034 ]
+9 : [  1         0.970148 ]
+field 3:
+0 : [ -1         1.06139  ]
+1 : [ -0.777778  0.682251 ]
+2 : [ -0.555556 -0.432988 ]
+3 : [ -0.333333 -1.08106  ]
+4 : [ -0.111111 -0.56274  ]
+5 : [  0.111111  0.56274  ]
+6 : [  0.333333  1.08106  ]
+7 : [  0.555556  0.432988 ]
+8 : [  0.777778 -0.682251 ]
+9 : [  1        -1.06139  ]
+field 4:
+0 : [ -1         1.15742  ]
+1 : [ -0.777778  0.344056 ]
+2 : [ -0.555556 -1.06189  ]
+3 : [ -0.333333 -0.638902 ]
+4 : [ -0.111111  0.884491 ]
+5 : [  0.111111  0.884491 ]
+6 : [  0.333333 -0.638902 ]
+7 : [  0.555556 -1.06189  ]
+8 : [  0.777778  0.344056 ]
+9 : [  1         1.15742  ]
+field 5:
+0 : [ -1          1.27398   ]
+1 : [ -0.777778  -0.0892214 ]
+2 : [ -0.555556  -1.23774   ]
+3 : [ -0.333333   0.592071  ]
+4 : [ -0.111111   0.997199  ]
+5 : [  0.111111  -0.997199  ]
+6 : [  0.333333  -0.592071  ]
+7 : [  0.555556   1.23774   ]
+8 : [  0.777778   0.0892214 ]
+9 : [  1         -1.27398   ]
+field 6:
+0 : [ -1         1.41501  ]
+1 : [ -0.777778 -0.587314 ]
+2 : [ -0.555556 -0.799073 ]
+3 : [ -0.333333  1.42533  ]
+4 : [ -0.111111 -0.695712 ]
+5 : [  0.111111 -0.695712 ]
+6 : [  0.333333  1.42533  ]
+7 : [  0.555556 -0.799073 ]
+8 : [  0.777778 -0.587314 ]
+9 : [  1         1.41501  ]
+field 7:
+0 : [ -1         1.57495  ]
+1 : [ -0.777778 -1.09677  ]
+2 : [ -0.555556  0.149795 ]
+3 : [ -0.333333  0.861206 ]
+4 : [ -0.111111 -1.5041   ]
+5 : [  0.111111  1.5041   ]
+6 : [  0.333333 -0.861206 ]
+7 : [  0.555556 -0.149795 ]
+8 : [  0.777778  1.09677  ]
+9 : [  1        -1.57495  ]
+field 8:
+0 : [ -1         1.7998   ]
+1 : [ -0.777778 -1.58544  ]
+2 : [ -0.555556  1.23813  ]
+3 : [ -0.333333 -0.786998 ]
+4 : [ -0.111111  0.269876 ]
+5 : [  0.111111  0.269876 ]
+6 : [  0.333333 -0.786998 ]
+7 : [  0.555556  1.23813  ]
+8 : [  0.777778 -1.58544  ]
+9 : [  1         1.7998   ]
+field 9:
+0 : [ -1         1.36677  ]
+1 : [ -0.777778 -1.27892  ]
+2 : [ -0.555556  1.2144   ]
+3 : [ -0.333333 -1.17202  ]
+4 : [ -0.111111  1.15103  ]
+5 : [  0.111111 -1.15103  ]
+6 : [  0.333333  1.17202  ]
+7 : [  0.555556 -1.2144   ]
+8 : [  0.777778  1.27892  ]
+9 : [  1        -1.36677  ]]
+myFunc(sample)= 10 10
+called  11  times
 myFunc= ([x0,x1,x2,x3,x4,x5,x6,x7,x8,x9]#10->[x0,x1,x2,x3,x4,x5,x6,x7,x8,x9]#10)o(FieldToPointFunction :
   class=KarhunenLoeveProjection name=Unnamed input description=[v0] output description=[xi0,xi1,xi2,xi3,xi4,xi5,xi6,xi7,xi8,xi9] number of calls=0)
 myFunc input description= [v0]
